--- a/cuadricula.css
+++ b/cuadricula.css
@@ -30,10 +30,12 @@ div {
     color: white;
     width: 15vw;
     height: 15vh;
-    background-color: green;
     text-align: center;
 }
 
+
+
 div:hover {
     background-color: rgb(0, 82, 0);
+    cursor: pointer;
 }
