--- a/style.css
+++ b/style.css
@@ -1,4 +1,29 @@
-h1 {
-    background-color: green;
-    color: white;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
+
+nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f5f5f5;
+    padding: 10px;
+  }
+  
+  nav a {
+    text-decoration: none;
+    color: #333;
+    font-size: 18px;
+    margin: 0 20px;
+    padding: 10px;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+  }
+  
+  nav a:hover {
+    background-color: #333;
+    color: #fff;
+  }
+  
