--- a/estilosFinal.css
+++ b/estilosFinal.css
@@ -31,6 +31,16 @@ body {
     background-color: #f1f1f1;
     padding: 20px;
   }
+
+  img {
+    transition: .2s;
+  }
+
+  img:hover {
+    transform: scale(1.05);
+    box-shadow: 2px 2px 24px 1px rgba(0,0,0,0.8);
+    transition: .2s;
+  }
   
   .hero-image {
     background-image: url('festival.jpg');
@@ -57,6 +67,10 @@ body {
     border-radius: 5px;
     text-decoration: none;
     margin-top: 20px;
+  }
+
+  .button:hover {
+    background-color: #333;
   }
   
   /* Estilos del pie de página */
